prohibition to create sessions with the same name
