# internal/handler/handler.go
@@ -239,6 +239,7 @@ func getAllObjectCatalogueHandler(c *gin.Context) {
 // @Param Input body authorization.Session true "Session data"
 // @Success 201 {number} int SessionID
 // @Failure 400 {object} serverstatus.StatusJson
+// @Failure 403 {object} serverstatus.StatusJson
 // @Failure 500 {object} serverstatus.StatusJson
 // @Router /api/session/create [post]
 func createSessionHandler(c *gin.Context) {
@@ -247,6 +248,22 @@ func createSessionHandler(c *gin.Context) {
 	if err != nil {
 		c.JSON(http.StatusBadRequest, serverstatus.StatusJson{
 			Message: err.Error(),
+		})
+
+		return
+	}
+
+	sM, err := authorization.GetSessionsWithName(obj.SessionName)
+
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, serverstatus.StatusJson{
+			Message: err.Error(),
+		})
+	}
+
+	if len(sM) > 1 {
+		c.JSON(http.StatusForbidden, serverstatus.StatusJson{
+			Message: "A session with this name already exists.",
 		})
 
 		return
